content/browser/accessibility/browser_accessibility_manager_unittest.cc
@@ -582,6 +582,7 @@ TEST(BrowserAccessibilityManagerTest, BoundsForRange) {
   ui::AXNodeData root;
   root.id = 1;
   root.role = ui::AX_ROLE_ROOT_WEB_AREA;
+  root.location = gfx::RectF(0, 0, 800, 600);
 
   ui::AXNodeData static_text;
   static_text.id = 2;
@@ -667,6 +668,7 @@ TEST(BrowserAccessibilityManagerTest, BoundsForRangeMultiElement) {
   ui::AXNodeData root;
   root.id = 1;
   root.role = ui::AX_ROLE_ROOT_WEB_AREA;
+  root.location = gfx::RectF(0, 0, 800, 600);
 
   ui::AXNodeData static_text;
   static_text.id = 2;
@@ -775,6 +777,7 @@ TEST(BrowserAccessibilityManagerTest, BoundsForRangeBiDi) {
   ui::AXNodeData root;
   root.id = 1;
   root.role = ui::AX_ROLE_ROOT_WEB_AREA;
+  root.location = gfx::RectF(0, 0, 800, 600);
 
   ui::AXNodeData static_text;
   static_text.id = 2;
@@ -851,6 +854,7 @@ TEST(BrowserAccessibilityManagerTest, BoundsForRangeScrolledWindow) {
   root.role = ui::AX_ROLE_ROOT_WEB_AREA;
   root.AddIntAttribute(ui::AX_ATTR_SCROLL_X, 25);
   root.AddIntAttribute(ui::AX_ATTR_SCROLL_Y, 50);
+  root.location = gfx::RectF(0, 0, 800, 600);
 
   ui::AXNodeData static_text;
   static_text.id = 2;
@@ -899,6 +903,7 @@ TEST(BrowserAccessibilityManagerTest, BoundsForRangeOnParentElement) {
   root.id = 1;
   root.role = ui::AX_ROLE_ROOT_WEB_AREA;
   root.child_ids.push_back(2);
+  root.location = gfx::RectF(0, 0, 800, 600);
 
   ui::AXNodeData div;
   div.id = 2;
